--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -35,7 +35,7 @@
       </div>  
     
     <footer class="full-width">
-      <a href='https://github.com/will16363'>Will16363</a></p>
+      will16363 <a href='https://github.com/will16363'>My Github Account</a></p>
       </footer>
   </body>
 </html>
