Moving pictures to lab2 folder.

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -8,3 +8,45 @@ For example: <div class="selector">
 You should not need to edit the CSS to do this, only the HTML.
 
 Don't forget to add an actual set of image descriptions to your image carousel.
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>William Jones's INST377 Labs</title>
+  </head>
+  
+  <body>
+    <div class="full-width wrapper">
+      <h1>William Jones's Labs for INST377</h1>
+      <div class="container">
+        <div class="left">
+          <h2>Album Names</h2>
+          <ol> 
+            <li>Worlds - Porter Robinson</li>
+            <li>I Am Not A Human Being - Lil Wayne</li>
+            <li>FRACTALS - Subtronics</li>
+            <li>Nurture - Porter Robinson</li>
+            <li>Where U Belong - Throttle</li>
+          </ol>
+        </div>
+
+        <div class="right">
+          <h2>Image Carousel</h2>
+            <div class="carousel">
+              <img src='images_lab2/mochi.gif' alt='A dancing mochi ball'/>
+              <img src='images_lab2/mochi.jpg' alt='A mochi ball in a bubble'/>
+              <img src='images_lab2/mochi.png' alt='A mochi ball'/>
+              <img src='images_lab2/mochi.svg' alt='A mochi ball with Bézier handles'/>
+            </div>
+            
+            <div>
+              Decsription of the images above
+            </div>    
+          </div>
+      </div>  
+    
+    <footer class="full-width">
+      will16363 <a href='https://github.com/will16363'>My Github Account</a></p>
+      </footer>
+  </body>
+</html>
