Added the CSS link to <head>

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,5 +1,3 @@
-Replace this with your complete HTML from Lab 1
-
 Hook it up to CSS by including style.css in the <head> tag
 
 Then add CSS class names to your HTML to make it look like the lab pictures.
@@ -13,6 +11,7 @@ Don't forget to add an actual set of image descriptions to your image carousel.
 <html>
   <head>
     <title>William Jones's INST377 Labs</title>
+	<link rel='stylesheet' href='style.css'/>
   </head>
   
   <body>
