--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,12 +1,3 @@
-Hook it up to CSS by including style.css in the <head> tag
-
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
-
-You should not need to edit the CSS to do this, only the HTML.
-
-Don't forget to add an actual set of image descriptions to your image carousel.
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,7 +6,7 @@ Don't forget to add an actual set of image descriptions to your image carousel.
   </head>
   
   <body>
-    <div class="full-width wrapper">
+    <div class="header">
       <h1>William Jones's Labs for INST377</h1>
       <div class="container">
         <div class="left">
@@ -30,7 +21,7 @@ Don't forget to add an actual set of image descriptions to your image carousel.
         </div>
 
         <div class="right">
-          <h2>Image Carousel</h2>
+          <h2 class="h2">Image Carousel</h2>
             <div class="carousel">
               <img src='images_lab2/mochi.gif' alt='A dancing mochi ball'/>
               <img src='images_lab2/mochi.jpg' alt='A mochi ball in a bubble'/>
@@ -44,8 +35,8 @@ Don't forget to add an actual set of image descriptions to your image carousel.
           </div>
       </div>  
     
-    <footer class="full-width">
-      will16363 <a href='https://github.com/will16363'>My Github Account</a></p>
+    <footer class="footer">
+      will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
       </footer>
   </body>
 </html>
