--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -9,18 +9,20 @@
     <div class="header">
       <h1>William Jones's Labs for INST377</h1>
       <div class="container">
-        <div class="left">
-          <h2>Album Names</h2>
-          <ol> 
-            <li>Worlds - Porter Robinson</li>
-            <li>I Am Not A Human Being - Lil Wayne</li>
-            <li>FRACTALS - Subtronics</li>
-            <li>Nurture - Porter Robinson</li>
-            <li>Where U Belong - Throttle</li>
-          </ol>
-        </div>
+        <div class="left_section">
+			<h2>Album Names</h2>
+				<div class="box">
+					<ol> 
+						<li>Worlds - Porter Robinson</li>
+						<li>I Am Not A Human Being - Lil Wayne</li>
+						<li>FRACTALS - Subtronics</li>
+						<li>Nurture - Porter Robinson</li>
+						<li>Where U Belong - Throttle</li>
+					</ol>
+				</div>
+		</div>
 
-        <div class="right">
+        <div class="right_section">
           <h2 class="h2">Image Carousel</h2>
             <div class="carousel">
               <img src='images_lab2/mochi.gif' alt='A dancing mochi ball'/>
@@ -29,7 +31,7 @@
               <img src='images_lab2/mochi.svg' alt='A mochi ball with Bézier handles'/>
             </div>
             
-            <div>
+            <div class="box">
               Decsription of the images above
             </div>    
           </div>
