--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -34,7 +34,7 @@
             <img src='images_lab2/mochi.gif' alt='A dancing mochi ball'/>
             <img src='images_lab2/mochi.jpg' alt='A mochi ball in a bubble'/>
             <img src='images_lab2/mochi.png' alt='A mochi ball'/>
-            <img src='images_lab2/mochi.svg' width=150 alt='A mochi ball with Bézier handles'/>
+            <img src='images_lab2/mochi.svg' alt='A mochi ball with Bézier handles'/>
           </div>
             
         <!-- Box in image -->
