--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Header -->
     <div class="header">
-      <h1>William Jones's Labs for INST377</h1>
+      <h1 class="h1">William Jones's Labs for INST377</h1>
     </div>
     
     <!-- Albums -->
@@ -43,10 +43,11 @@
         </div>   
       </div>
     </div>
-    
+
     <!-- Footer -->
-    <footer class="footer">
-      will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
-      </footer>
-  </body>
-</html>
+      <div class="wrapper"></div>
+        <footer class="footer">
+        will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
+        </footer>
+    </body>
+  </html>
