--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Header -->
     <div class="header">
-      <h1 class="h1">William Jones's Labs for INST377</h1>
+      <h1>William Jones's Labs for INST377</h1>
     </div>
     
     <!-- Albums -->
@@ -27,9 +27,9 @@
       </div>
 
     <!-- Images -->
-    <div class="container"></div>
+    <div class="header">
       <div class="right_section box">
-        <h2 class="h2">Image Carousel</h2>
+        <h2>Image Carousel</h2>
           <div class="carousel grid">
             <img src='images_lab2/mochi.gif' alt='A dancing mochi ball'/>
             <img src='images_lab2/mochi.jpg' alt='A mochi ball in a bubble'/>
@@ -39,15 +39,16 @@
             
         <!-- Box in image -->
         <div class="box">
-          Decsription of the images above
+          <p class="subtitle">Mochi balls in different file formats</p>
         </div>   
       </div>
+    </div>
     </div>
 
     <!-- Footer -->
       <div class="wrapper"></div>
         <footer class="footer">
-        will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
+          will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
         </footer>
     </body>
   </html>
