--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -48,7 +48,7 @@
     <!-- Footer -->
       <div class="wrapper"></div>
         <footer class="footer">
-          will16363 <a class="a" href='https://github.com/will16363'>My Github Account</a></p>
+          My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a></p>
         </footer>
     </body>
   </html>
