--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -5,7 +5,7 @@
 	<link rel='stylesheet' href='style.css'/>
   </head>
   
-  <body>
+  <body class="wrapper">
     <!-- Header -->
     <div class="header">
       <h1>William Jones's Labs for INST377</h1>
@@ -46,9 +46,8 @@
     </div>
 
     <!-- Footer -->
-      <div class="wrapper"></div>
-        <footer class="footer">
-          My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a></p>
-        </footer>
+      <footer class="footer">
+        My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
+      </footer>
     </body>
   </html>
