Input dog photos into html file.

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -3,3 +3,57 @@
     - The styles in this folder's `style.css`
     - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
 -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>William Jones's INST377 Labs</title>
+	<link rel='stylesheet' href='style.css'/>
+  </head>
+  
+  <body class="wrapper">
+    <!-- Header -->
+    <div class="header">
+      <h1>William Jones's Labs for INST377</h1>
+    </div>
+    
+    <!-- Albums -->
+    <div class="container">
+        <div class="left_section box">
+          <h2>Album Names</h2>
+				    <div class="box">
+              <ol> 
+                <li>Worlds - Porter Robinson</li>
+                <li>I Am Not A Human Being - Lil Wayne</li>
+                <li>FRACTALS - Subtronics</li>
+                <li>Nurture - Porter Robinson</li>
+                <li>Where U Belong - Throttle</li>
+              </ol>
+				    </div>
+      </div>
+
+    <!-- Images -->
+    <div class="header">
+      <div class="right_section box">
+        <h2>Image Carousel</h2>
+          <div class="carousel grid">
+            <img src='images/dog1.jpeg' alt='A dancing mochi ball'/>
+            <img src='images/dog2.jpeg' alt='A mochi ball in a bubble'/>
+            <img src='images/dog3.jpeg' alt='A mochi ball'/>
+            <img src='images/dog4.jpeg' alt='A mochi ball with Bézier handles'/>
+          </div>
+            
+        <!-- Box in image -->
+        <div class="box">
+          <p class="subtitle">Mochi balls in different file formats</p>
+        </div>   
+      </div>
+    </div>
+    </div>
+
+    <!-- Footer -->
+      <footer class="footer">
+        My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
+      </footer>
+    </body>
+  </html>
