Updated dog alt text.

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -37,10 +37,10 @@
       <div class="right_section box">
         <h2>Image Carousel</h2>
           <div class="carousel grid">
-            <img src='images/dog1.jpeg' alt='A dancing mochi ball'/>
-            <img src='images/dog2.jpeg' alt='A mochi ball in a bubble'/>
-            <img src='images/dog3.jpeg' alt='A mochi ball'/>
-            <img src='images/dog4.jpeg' alt='A mochi ball with Bézier handles'/>
+            <img src='images/dog1.jpeg' alt='A golden retriever.'/>
+            <img src='images/dog2.jpeg' alt='A pitbull.'/>
+            <img src='images/dog3.jpeg' alt='A fluffy white dog.'/>
+            <img src='images/dog4.jpeg' alt='A pug.'/>
           </div>
             
         <!-- Box in image -->
