Updated the description box in the photos box.

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -45,7 +45,7 @@
             
         <!-- Box in image -->
         <div class="box">
-          <p class="subtitle">Mochi balls in different file formats</p>
+          <p class="subtitle">Dog photos.</p>
         </div>   
       </div>
     </div>
