--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,9 +1,3 @@
-<!--
-    Replace this with your working code from Lab 2, and include:
-    - The styles in this folder's `style.css`
-    - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
--->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -21,7 +15,7 @@
     <div class="container">
         <div class="left_section box">
           <h2>Album Names</h2>
-				    <div class="box">
+			<div class="box">
               <ol> 
                 <li>Worlds - Porter Robinson</li>
                 <li>I Am Not A Human Being - Lil Wayne</li>
@@ -29,31 +23,35 @@
                 <li>Nurture - Porter Robinson</li>
                 <li>Where U Belong - Throttle</li>
               </ol>
-				    </div>
+			</div>
       </div>
 
     <!-- Images -->
-    <div class="header">
+    <!-- <div class="header"> -->
       <div class="right_section box">
         <h2>Image Carousel</h2>
-          <div class="carousel grid">
-            <img src='images/dog1.jpeg' alt='A golden retriever.'/>
-            <img src='images/dog2.jpeg' alt='A pitbull.'/>
-            <img src='images/dog3.jpeg' alt='A fluffy white dog.'/>
-            <img src='images/dog4.jpeg' alt='A pug.'/>
+          <div class="carousel">
+              <div class="grid">
+                <img src='images/dog1.jpeg' alt='A golden retriever.'/>
+                <img src='images/dog2.jpeg' alt='A pitbull.'/>
+                <img src='images/dog3.jpeg' alt='A fluffy white dog.'/>
+                <img src='images/dog4.jpeg' alt='A pug.'/>
+              </div>
           </div>
-            
+
         <!-- Box in image -->
         <div class="box">
-          <p class="subtitle">Dog photos.</p>
+          Dog photos.
         </div>   
       </div>
     </div>
-    </div>
+    
 
     <!-- Footer -->
       <footer class="footer">
         My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
       </footer>
+      <script src="script.js"></script>
+    </div>
     </body>
   </html>
