Added the slide and next/prev buttons.

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -30,14 +30,16 @@
     <!-- <div class="header"> -->
       <div class="right_section box">
         <h2>Image Carousel</h2>
-          <div class="carousel">
-              <div class="grid">
+        <div class="carousel">
+            <button class="prev">prev</button>
+            <div class="slides">
                 <img src='images/dog1.jpeg' alt='A golden retriever.'/>
                 <img src='images/dog2.jpeg' alt='A pitbull.'/>
                 <img src='images/dog3.jpeg' alt='A fluffy white dog.'/>
                 <img src='images/dog4.jpeg' alt='A pug.'/>
-              </div>
-          </div>
+            </div>
+            <button class="next">next</button>
+        </div>
 
         <!-- Box in image -->
         <div class="box">
@@ -52,6 +54,5 @@
         My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
       </footer>
       <script src="script.js"></script>
-    </div>
     </body>
   </html>
