--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -33,10 +33,10 @@
         <div class="carousel">
             <button class="prev">prev</button>
             <div class="slides">
-                <img src='images/dog1.jpeg' alt='A golden retriever.'/>
-                <img src='images/dog2.jpeg' alt='A pitbull.'/>
-                <img src='images/dog3.jpeg' alt='A fluffy white dog.'/>
-                <img src='images/dog4.jpeg' alt='A pug.'/>
+                <div class="carousel_item visible"><img src='images/dog1.jpeg' alt='A golden retriever.'/></div>
+                <div class="carousel_item hidden"><img src='images/dog2.jpeg' alt='A pitbull.'/></div>
+                <div class="carousel_item hidden"><img src='images/dog3.jpeg' alt='A fluffy white dog.'/></div>
+                <div class="carousel_item hidden"><img src='images/dog4.jpeg' alt='A pug.'/></div>
             </div>
             <button class="next">next</button>
         </div>
