--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -27,7 +27,7 @@
       </div>
 
     <!-- Images -->
-    <!-- <div class="header"> -->
+    <div class="header">
       <div class="right_section box">
         <h2>Image Carousel</h2>
         <div class="carousel">
@@ -46,6 +46,7 @@
           Dog photos.
         </div>   
       </div>
+    </div>
     </div>
     
 
