Trying out some changes.

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -27,6 +27,7 @@
     </div>
 
     <!-- Images -->
+    <!-- <div class="header"> Ask about this right here -->
       <div class="right_section box">
         <h2>Image Carousel</h2>
         <div class="carousel">
@@ -46,6 +47,7 @@
         </div>
       </div>
     </div>
+    <!-- </div> Ask about this right here -->
     </div>
     
     <!-- Footer -->
