--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -8,3 +8,16 @@
 <!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
 
 <!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
+
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>William Jones' Labs for INST377</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	
+</body>
+</html>
