--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -18,6 +18,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<div class="wrapper">
+		<header class="header">
+			<h1>William Jones' Labs for INST377</h1>
+		</header>
+		<div class="container">
+			<div class="left_section"></div>
+			<div class="right_section"></div>
+		</div>
+	</div>
 </body>
 </html>
