Updates to Lab 4.

--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -10,22 +10,31 @@
 <!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
 
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>William Jones' Labs for INST377</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="wrapper">
-		<header class="header">
-			<h1>William Jones' Labs for INST377</h1>
-		</header>
-		<div class="container">
-			<div class="left_section"></div>
-			<div class="right_section"></div>
-		</div>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>William Jones' Labs for INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>William Jones' Labs for INST377</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <form action="/api" class="box">
+            <label for="resto"></label>
+			<input type="text" name="resto" id="resto" />
+			<button type="submit">Submit</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restaurants_list box">A list of local restaurants</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
