--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -24,7 +24,9 @@
       </header>
       <div class="container">
         <div class="left_section box">
+			<h3>Form Inputs</h3>
           <form action="/api" class="box">
+			Restaurant Name
             <label for="resto"></label>
 			<input type="text" name="resto" id="resto" />
 			<button type="submit">Submit</button>
@@ -32,7 +34,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurants_list box">A list of local restaurants</div>
+          <div class="restaurants_list box">A list of local restaurants from an API</div>
         </div>
       </div>
     </div>
