--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -34,9 +34,12 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurants_list box">A list of local restaurants from an API</div>
+          <div class="restaurants_list box">A list of restaurants from an API</div>
         </div>
       </div>
+      <footer class="footer">
+        My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
+      </footer>
     </div>
   </body>
 </html>
