--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -24,21 +24,24 @@
       </header>
       <div class="container">
         <div class="left_section box">
-			<h3>Form Inputs</h3>
+          <h3>Form Inputs</h3>
           <form action="/api" class="box">
-			Restaurant Name
+            Restaurant Name
             <label for="resto"></label>
-			<input type="text" name="resto" id="resto" />
-			<button type="submit">Submit</button>
+            <input type="text" name="resto" id="resto" />
+            <button type="submit">Submit</button>
           </form>
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurants_list box">A list of restaurants from an API</div>
+          <div class="restaurants_list box">
+            A list of restaurants from an API
+          </div>
         </div>
       </div>
       <footer class="footer">
-        My Github Account Name: <a class="a" href='https://github.com/will16363'>Will16363</a>
+        My Github Account Name:
+        <a class="a" href="https://github.com/will16363">Will16363</a>
       </footer>
     </div>
   </body>
