--- a/client/tetris/index.html
+++ b/client/tetris/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Tetris</title>
     <link rel="stylesheet" href="style.css"></link>
-    <title>Basic Tetris</title>
+    <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
-    <h3>Score:<span id="Score">0</span></h3>
+    <h3>Score:<span id="score">0</span></h3>
     <button id="start-button"> Start/Pause</button>
 
     <div class="container">
@@ -243,6 +244,5 @@
         <div></div>
       </div>
     </div>
-    <script src="script.js"></script>
-    </body>
+  </body>
 </html>
