Linked script file to html

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -1,5 +1,3 @@
-<!-- Temporarily unhook your script.js file from your main index file -->
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -35,5 +33,6 @@
         <a class="a" href="https://github.com/will16363">Will16363</a>
       </footer>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
