--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -33,6 +33,6 @@
         <a class="a" href="https://github.com/will16363">Will16363</a>
       </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
