--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
-          <div class="restaurants_list box">
+          <div class="box" id="restaurant_list">
             A list of restaurants from an API
           </div>
         </div>
@@ -33,6 +33,6 @@
         <a class="a" href="https://github.com/will16363">Will16363</a>
       </footer>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
