--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="left_section box">
           <h3>Form Inputs</h3>
-          <form action="/api" class="box .main_form">
+          <form action="/api" class=".main_form">
             Restaurant Name
             <label for="resto"></label>
             <input type="text" name="resto" id="resto" />
