--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -1,9 +1,40 @@
-<!--
-    This is how to build the CSS-only load animation from loading.io    
-    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-
-    This is helpful for showing your client-side users when data is loading,
-    since there's otherwise no sign your app is thinking about something!
-
-    Try placing it at the same level in your element tree as your Submit button
--->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>William Jones' Labs for INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>William Jones' Labs for INST377</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Form Inputs</h3>
+          <form action="/api" class="box main_form">
+            <div>
+            <label for="resto">Restaurant Name</label>
+            <input type="text" name="resto" id="resto" />
+            </div>
+            <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="box" id="restaurant_list">
+            A list of restaurants from an API
+          </div>
+        </div>
+      </div>
+      <footer class="footer">
+        My Github Account Name:
+        <a class="a" href="https://github.com/will16363">Will16363</a>
+      </footer>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
