Trying to fix the button

--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -20,7 +20,7 @@
             <input type="text" name="resto" id="resto"/>
             </div>
             <button type="submit">Submit</button>
-            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+            <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
           </form>
         </div>
         <div class="right_section box">
