--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -17,10 +17,11 @@
           <form action="/api" class="box main_form">
             <div>
             <label for="resto">Restaurant Name</label>
-            <input type="text" name="resto" id="resto"/>
+            <input type="text" name="resto" id="resto" />
             </div>
             <button type="submit">Submit</button>
-            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+            <button type="submit">Submit</button>
+            <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
           </form>
         </div>
         <div class="right_section box">
