--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -19,8 +19,8 @@
             <label for="resto">Restaurant Name</label>
             <input type="text" name="resto" id="resto" />
             </div>
-            <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
-            <button type="submit">Submit</button>
+            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+            <button type="submit" id="get-resto">Submit</button>
           </form>
         </div>
         <div class="right_section box">
