--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -16,15 +16,15 @@
           <h3>Form Inputs</h3>
           <form action="/api" class="box main_form">
             <div>
-            <label for="resto">Restaurant Name</label>
+            <label for="resto">Filter Restaurant List</label>
             <input type="text" name="resto" id="resto" />
             </div>
             <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-            <button type="submit" id="get-resto">Submit</button>
+            <button type="submit" id="get-resto">Change Restaurants</button>
           </form>
         </div>
         <div class="right_section box">
-          <h3>Local Restaurants</h3>
+          <h3>Local Restaurant Map</h3>
           <div class="box" id="restaurant_list">
             A list of restaurants from an API
           </div>
