--- a/client/lab_8/index.html
+++ b/client/lab_8/index.html
@@ -4,7 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>William Jones' Labs for INST377</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+    crossorigin=""/>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+     crossorigin=""></script>
   </head>
   <body>
     <div class="wrapper">
@@ -25,6 +31,7 @@
         </div>
         <div class="right_section box">
           <h3>Local Restaurant Map</h3>
+          <div id="map"></div>
           <div class="box" id="restaurant_list">
             A list of restaurants from an API
           </div>
